force-app/main/default/objects/HAM_Filters__mdt/HAM_Filters__mdt.object-meta.xml
<CustomObject>
    <description>Used to hold the Filters available in Alumni Directory page.</description>
    <label>HAM Filter</label>
    <pluralLabel>HAM Filters</pluralLabel>
</CustomObject>