force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Order__c</fullName>
    <label>HAM Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>