force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>HAM_Placeholder__c</fullName>
    <label>HAM Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>