force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Reference_Field_API__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Field_API__c</fullName>
    <inlineHelpText>Store the Object and Field API name if Type is Picklist</inlineHelpText>
    <label>HAM Reference Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>