force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Reference_Object_API__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Object_API__c</fullName>
    <label>HAM Reference Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>