force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Type__c</fullName>
    <inlineHelpText>Holds Custom or Picklist</inlineHelpText>
    <label>HAM Reference Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>