force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Reference_Values__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Values__c</fullName>
    <inlineHelpText>Store the picklist values in &quot;;&quot; separated if the Type is Custom</inlineHelpText>
    <label>HAM Reference Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>