force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Related_Filter_Object__c.field-meta.xml
<CustomField>
    <fullName>HAM_Related_Filter_Object__c</fullName>
    <label>Related Filter Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>