force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Related_Reference_Additional_Filter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Related_Reference_Additional_Filter__c</fullName>
    <label>Related Reference Additional Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>