force-app/main/default/objects/HAM_Filters__mdt/fields/HAM_Related_Reference_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>HAM_Related_Reference_Filter_Field__c</fullName>
    <label>Related Reference Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>